I have started work for main content of you-tube copy

--- a/index.html
+++ b/index.html
@@ -45,5 +45,236 @@
       </div>
     </header>
 
+    <main>
+      <div class="video-container">
+        <img src="./images/thumbnails/thumbnail-1.webp" alt="video-image">
+        <div class="video-description">
+          <div class="channel-picture">
+            <img src="./images/chanel-picture/channel-1.jpeg" alt="chanel-picture">
+          </div>
+          <div class="video-text-description">
+            <div class="video-header">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </div>
+            <div class="channel-name">
+              Marques Brownlee
+            </div>
+            <div class="viewers-count">
+              3.4M views · 6 months ago
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="video-container">
+        <img src="./images/thumbnails/thumbnail-2.webp" alt="video-image">
+        <div class="video-description">
+          <div class="channel-picture">
+            <img src="./images/chanel-picture/channel-2.jpeg" alt="chanel-picture">
+          </div>
+          <div class="video-text-description">
+            <div class="video-header">
+              Try Not To Laugh Challenge #9
+            </div>
+            <div class="channel-name">
+              Markiplier
+            </div>
+            <div class="viewers-count">
+              19M views · 4 years ago
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="video-container">
+        <img src="./images/thumbnails/thumbnail-3.webp" alt="video-image">
+        <div class="video-description">
+          <div class="channel-picture">
+            <img src="./images/chanel-picture/channel-3.jpeg" alt="chanel-picture">
+          </div>
+          <div class="video-text-description">
+            <div class="video-header">
+              Crazy Tik Toks Taken Moments Before DISASTER
+            </div>
+            <div class="channel-name">
+              SSSniperWolf
+            </div>
+            <div class="viewers-count">
+              12M views · 1 year ago
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="video-container">
+        <img src="./images/thumbnails/thumbnail-4.webp" alt="video-image">
+        <div class="video-description">
+          <div class="channel-picture">
+            <img src="./images/chanel-picture/channel-4.jpeg" alt="chanel-picture">
+          </div>
+          <div class="video-text-description">
+            <div class="video-header">
+              The Simplest Math Problem No One Can Solve - Collatz Conjecture
+            </div>
+            <div class="channel-name">
+              Veritasium
+            </div>
+            <div class="viewers-count">
+              18M views · 4 months ago
+            </div> 
+          </div>
+        </div>
+      </div>
+      <div class="video-container">
+        <img src="./images/thumbnails/thumbnail-5.webp" alt="video-image">
+        <div class="video-description">
+          <div class="channel-picture">
+            <img src="./images/chanel-picture/channel-5.jpeg" alt="chanel-picture">
+          </div>
+          <div class="video-text-description">
+            <div class="video-header">
+              Kadane's Algorithm to Maximum Sum Subarray Problem
+            </div>
+            <div class="channel-name">
+              CS Dojo
+            </div>
+            <div class="viewers-count">
+              519K views · 5 years ago
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="video-container">
+        <img src="./images/thumbnails/thumbnail-6.webp" alt="video-image">
+        <div class="video-description">
+          <div class="channel-picture">
+            <img src="./images/chanel-picture/channel-6.jpeg" alt="chanel-picture">
+          </div>
+          <div class="video-text-description">
+            <div class="video-header">
+              Anything You Can Fit In The Circle I’ll Pay For
+            </div>
+            <div class="channel-name">
+              MrBeast
+            </div>
+            <div class="viewers-count">
+              141M views · 1 year ago
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="video-container">
+        <img src="./images/thumbnails/thumbnail-7.webp" alt="video-image">
+        <div class="video-description">
+          <div class="channel-picture">
+            <img src="./images/chanel-picture/channel-7.jpeg" alt="chanel-picture">
+          </div>
+          <div class="video-text-description">
+            <div class="video-header">
+              Why Planes Don't Fly Over Tibet
+            </div>
+            <div class="channel-name">
+              RealLifeLore
+            </div>
+            <div class="viewers-count">
+              6.6M views · 1 year ago
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="video-container">
+        <img src="./images/thumbnails/thumbnail-8.webp" alt="video-image">
+        <div class="video-description">
+          <div class="channel-picture">
+            <img src="./images/chanel-picture/channel-8.jpeg" alt="chanel-picture">
+          </div>
+          <div class="video-text-description">
+            <div class="video-header">
+              Inside The World's Biggest Passenger Plane
+            </div>
+            <div class="channel-name">
+              Tech Vision
+            </div>
+            <div class="viewers-count">
+              3.7M views · 10 months ago
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="video-container">
+        <img src="./images/thumbnails/thumbnail-9.webp" alt="video-image">
+        <div class="video-description">
+          <div class="channel-picture">
+            <img src="./images/chanel-picture/channel-9.jpeg" alt="chanel-picture">
+          </div>
+          <div class="video-text-description">
+            <div class="video-header">
+              The SECRET to Super Human STRENGTH
+            </div>
+            <div class="channel-name">
+              ThenX
+            </div>
+            <div class="viewers-count">
+              20M views · 3 year ago
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="video-container">
+        <img src="./images/thumbnails/thumbnail-10.webp" alt="video-image">
+        <div class="video-description">
+          <div class="channel-picture">
+            <img src="./images/chanel-picture/channel-10.jpeg" alt="chanel-picture">
+          </div>
+          <div class="video-text-description">
+            <div class="video-header">
+              How The World's Largest Cruise Ship Makes 30,000 Meals Every Day
+            </div>
+            <div class="channel-name">
+              Business Insider
+            </div>
+            <div class="viewers-count">
+              14M views · 1 year ago
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="video-container">
+        <img src="./images/thumbnails/thumbnail-11.webp" alt="video-image">
+        <div class="video-description">
+          <div class="channel-picture">
+            <img src="./images/chanel-picture/channel-11.jpeg" alt="chanel-picture">
+          </div>
+          <div class="video-text-description">
+            <div class="video-header">
+              Dubai's Crazy Underwater Train and Other Things #Only in Dubai
+            </div>
+            <div class="channel-name">
+              Destination Tips
+            </div>
+            <div class="viewers-count">
+              3M views · 1 year ago
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="video-container">
+        <img src="./images/thumbnails/thumbnail-12.webp" alt="video-image">
+        <div class="video-description">
+          <div class="channel-picture">
+            <img src="./images/chanel-picture/channel-12.jpeg" alt="chanel-picture">
+          </div>
+          <div class="video-text-description">
+            <div class="video-header">
+              What would happen if you didn't drink water? - Mia Nacamulli
+            </div>
+            <div class="channel-name">
+              TED-Ed
+            </div>
+            <div class="viewers-count">
+              12M views · 5 years ago
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
   </body>
 </html>
