--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               Marques Brownlee
             </div>
             <div class="viewers-count">
-              3.4M views · 6 months ago
+              3.4M views &#183; 6 months ago
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
               Markiplier
             </div>
             <div class="viewers-count">
-              19M views · 4 years ago
+              19M views &#183; 4 years ago
             </div>
           </div>
         </div>
@@ -98,7 +98,7 @@
               SSSniperWolf
             </div>
             <div class="viewers-count">
-              12M views · 1 year ago
+              12M views &#183; 1 year ago
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@
               Veritasium
             </div>
             <div class="viewers-count">
-              18M views · 4 months ago
+              18M views &#183; 4 months ago
             </div> 
           </div>
         </div>
@@ -136,7 +136,7 @@
               CS Dojo
             </div>
             <div class="viewers-count">
-              519K views · 5 years ago
+              519K views &#183; 5 years ago
             </div>
           </div>
         </div>
@@ -155,7 +155,7 @@
               MrBeast
             </div>
             <div class="viewers-count">
-              141M views · 1 year ago
+              141M views &#183; 1 year ago
             </div>
           </div>
         </div>
@@ -174,7 +174,7 @@
               RealLifeLore
             </div>
             <div class="viewers-count">
-              6.6M views · 1 year ago
+              6.6M views &#183; 1 year ago
             </div>
           </div>
         </div>
@@ -193,7 +193,7 @@
               Tech Vision
             </div>
             <div class="viewers-count">
-              3.7M views · 10 months ago
+              3.7M views &#183; 10 months ago
             </div>
           </div>
         </div>
@@ -212,7 +212,7 @@
               ThenX
             </div>
             <div class="viewers-count">
-              20M views · 3 year ago
+              20M views &#183; 3 year ago
             </div>
           </div>
         </div>
@@ -231,7 +231,7 @@
               Business Insider
             </div>
             <div class="viewers-count">
-              14M views · 1 year ago
+              14M views &#183; 1 year ago
             </div>
           </div>
         </div>
@@ -250,7 +250,7 @@
               Destination Tips
             </div>
             <div class="viewers-count">
-              3M views · 1 year ago
+              3M views &#183; 1 year ago
             </div>
           </div>
         </div>
@@ -269,12 +269,11 @@
               TED-Ed
             </div>
             <div class="viewers-count">
-              12M views · 5 years ago
+              12M views &#183; 5 years ago
             </div>
           </div>
         </div>
       </div>
     </main>
-
   </body>
 </html>
