--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./styles/general.css">
     <link rel="stylesheet" href="./styles/main-area.css">
     <link rel="stylesheet" href="./styles/header.css">
-    <link rel="stylesheet" href="./styles/right-sidebar.css">
+    <link rel="stylesheet" href="./styles/left-sidebar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -44,6 +44,33 @@
         <img src="./images/chanel-picture/user-photo.jpg" alt="user-photo">
       </div>
     </header>
+
+    <nav>
+      <div class="left-section-container">
+        <img src="./images/icons/home.svg" alt="home-icon">
+        <div class="nav-description">Home</div>
+      </div>
+      <div class="left-section-container">
+        <img src="./images/icons/explore.svg" alt="explore-icon">
+        <div class="nav-description">Explore</div>
+      </div>
+      <div class="left-section-container">
+        <img src="./images/icons/subscriptions.svg" alt="subscription-icon">
+        <div class="nav-description">Subscriptions</div>
+      </div>
+      <div class="left-section-container">
+        <img src="./images/icons/originals.svg" alt="original-icon">
+        <div class="nav-description">Originals</div>
+      </div>
+      <div class="left-section-container">
+        <img src="./images/icons/youtube-music.svg" alt="youtube-music-icon">
+        <div class="nav-description">YouTube Music</div>
+      </div>
+      <div class="left-section-container">
+        <img src="./images/icons/library.svg" alt="library-icon">
+        <div class="nav-description">Library</div>
+      </div>
+    </nav>
 
     <main>
       <div class="video-container">
