--- a/index.html
+++ b/index.html
@@ -74,14 +74,31 @@
 
     <main>
       <div class="video-container">
-        <img src="./images/thumbnails/thumbnail-1.webp" alt="video-image">
+        <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank">
+          <img src="./images/thumbnails/thumbnail-1.webp" alt="video-image">
+        </a>
         <div class="video-description">
           <div class="channel-picture">
-            <img src="./images/chanel-picture/channel-1.jpeg" alt="chanel-picture">
+            <a href="https://www.youtube.com/c/mkbhd" target="_blank">
+              <img src="./images/chanel-picture/channel-1.jpeg" alt="chanel-picture">
+            </a>
+            <div class="tooltip-channel">
+              <img src="./images/chanel-picture/channel-1.jpeg" alt="chanel-picture">
+              <div class="tooltip-channel-description">
+                <div>
+                  Marques Brownlee
+                </div>
+                <div>
+                  15M Subscribers
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-text-description">
             <div class="video-header">
-              Talking Tech and AI with Google CEO Sundar Pichai!
+              <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank">
+                Talking Tech and AI with Google CEO Sundar Pichai!
+              </a>
             </div>
             <div class="channel-name">
               Marques Brownlee
@@ -93,14 +110,31 @@
         </div>
       </div>
       <div class="video-container">
-        <img src="./images/thumbnails/thumbnail-2.webp" alt="video-image">
+        <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk" target="_blank">
+          <img src="./images/thumbnails/thumbnail-2.webp" alt="video-image">
+        </a>
         <div class="video-description">
           <div class="channel-picture">
-            <img src="./images/chanel-picture/channel-2.jpeg" alt="chanel-picture">
+            <a href="https://www.youtube.com/c/markiplier" target="_blank">
+              <img src="./images/chanel-picture/channel-2.jpeg" alt="chanel-picture">
+            </a>
+            <div class="tooltip-channel">
+              <img src="./images/chanel-picture/channel-2.jpeg" alt="chanel-picture">
+              <div class="tooltip-channel-description">
+                <div>
+                  Markiplier
+                </div>
+                <div>
+                  28M Subscribers
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-text-description">
             <div class="video-header">
-              Try Not To Laugh Challenge #9
+              <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk" target="_blank">
+                Try Not To Laugh Challenge #9
+              </a>
             </div>
             <div class="channel-name">
               Markiplier
@@ -112,14 +146,31 @@
         </div>
       </div>
       <div class="video-container">
-        <img src="./images/thumbnails/thumbnail-3.webp" alt="video-image">
+        <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w" target="_blank">
+          <img src="./images/thumbnails/thumbnail-3.webp" alt="video-image">
+        </a>
         <div class="video-description">
           <div class="channel-picture">
-            <img src="./images/chanel-picture/channel-3.jpeg" alt="chanel-picture">
+            <a href="https://www.youtube.com/user/SSSniperWolf" target="_blank">
+              <img src="./images/chanel-picture/channel-3.jpeg" alt="chanel-picture">
+            </a>
+            <div class="tooltip-channel">
+              <img src="./images/chanel-picture/channel-3.jpeg" alt="chanel-picture">
+              <div class="tooltip-channel-description">
+                <div>
+                  SSSniperWolf
+                </div>
+                <div>
+                  16M Subscribers
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-text-description">
             <div class="video-header">
-              Crazy Tik Toks Taken Moments Before DISASTER
+              <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w" target="_blank">
+                Crazy Tik Toks Taken Moments Before DISASTER
+              </a>
             </div>
             <div class="channel-name">
               SSSniperWolf
@@ -131,14 +182,31 @@
         </div>
       </div>
       <div class="video-container">
-        <img src="./images/thumbnails/thumbnail-4.webp" alt="video-image">
+        <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank">
+          <img src="./images/thumbnails/thumbnail-4.webp" alt="video-image">
+        </a>
         <div class="video-description">
           <div class="channel-picture">
-            <img src="./images/chanel-picture/channel-4.jpeg" alt="chanel-picture">
+            <a href="https://www.youtube.com/c/veritasium" target="_blank">
+              <img src="./images/chanel-picture/channel-4.jpeg" alt="chanel-picture">
+            </a>
+            <div class="tooltip-channel">
+              <img src="./images/chanel-picture/channel-4.jpeg" alt="chanel-picture">
+              <div class="tooltip-channel-description">
+                <div>
+                  Veritasium
+                </div>
+                <div>
+                  25M Subscribers
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-text-description">
             <div class="video-header">
-              The Simplest Math Problem No One Can Solve - Collatz Conjecture
+              <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank">
+                The Simplest Math Problem No One Can Solve - Collatz Conjecture
+              </a>
             </div>
             <div class="channel-name">
               Veritasium
@@ -150,14 +218,31 @@
         </div>
       </div>
       <div class="video-container">
-        <img src="./images/thumbnails/thumbnail-5.webp" alt="video-image">
+        <a href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank">
+          <img src="./images/thumbnails/thumbnail-5.webp" alt="video-image">
+        </a>
         <div class="video-description">
           <div class="channel-picture">
-            <img src="./images/chanel-picture/channel-5.jpeg" alt="chanel-picture">
+            <a href="https://www.youtube.com/c/CSDojo" target="_blank">
+              <img src="./images/chanel-picture/channel-5.jpeg" alt="chanel-picture">
+            </a>
+            <div class="tooltip-channel">
+              <img src="./images/chanel-picture/channel-5.jpeg" alt="chanel-picture">
+              <div class="tooltip-channel-description">
+                <div>
+                  CS Dojo
+                </div>
+                <div>
+                  1M Subscribers
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-text-description">
             <div class="video-header">
-              Kadane's Algorithm to Maximum Sum Subarray Problem
+              <a href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank">
+                Kadane's Algorithm to Maximum Sum Subarray Problem
+              </a>
             </div>
             <div class="channel-name">
               CS Dojo
@@ -169,14 +254,31 @@
         </div>
       </div>
       <div class="video-container">
-        <img src="./images/thumbnails/thumbnail-6.webp" alt="video-image">
+        <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg" target="_blank">
+          <img src="./images/thumbnails/thumbnail-6.webp" alt="video-image">
+        </a>
         <div class="video-description">
           <div class="channel-picture">
-            <img src="./images/chanel-picture/channel-6.jpeg" alt="chanel-picture">
+            <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA" target="_blank">
+              <img src="./images/chanel-picture/channel-6.jpeg" alt="chanel-picture">
+            </a>
+            <div class="tooltip-channel">
+              <img src="./images/chanel-picture/channel-6.jpeg" alt="chanel-picture">
+              <div class="tooltip-channel-description">
+                <div>
+                  MrBeast
+                </div>
+                <div>
+                  180M Subscribers
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-text-description">
             <div class="video-header">
-              Anything You Can Fit In The Circle I’ll Pay For
+              <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg" target="_blank">
+                Anything You Can Fit In The Circle I’ll Pay For
+              </a>
             </div>
             <div class="channel-name">
               MrBeast
@@ -188,14 +290,31 @@
         </div>
       </div>
       <div class="video-container">
-        <img src="./images/thumbnails/thumbnail-7.webp" alt="video-image">
+        <a href="https://www.youtube.com/watch?v=fNVa1qMbF9Y" target="_blank">
+          <img src="./images/thumbnails/thumbnail-7.webp" alt="video-image">
+        </a>
         <div class="video-description">
           <div class="channel-picture">
-            <img src="./images/chanel-picture/channel-7.jpeg" alt="chanel-picture">
+            <a href="https://www.youtube.com/channel/UCP5tjEmvPItGyLhmjdwP7Ww" target="_blank">
+              <img src="./images/chanel-picture/channel-7.jpeg" alt="chanel-picture">
+            </a>
+            <div class="tooltip-channel">
+              <img src="./images/chanel-picture/channel-7.jpeg" alt="chanel-picture">
+              <div class="tooltip-channel-description">
+                <div>
+                  RealLifeLore
+                </div>
+                <div>
+                  10M Subscribers
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-text-description">
             <div class="video-header">
-              Why Planes Don't Fly Over Tibet
+              <a href="https://www.youtube.com/watch?v=fNVa1qMbF9Y" target="_blank">
+                Why Planes Don't Fly Over Tibet
+              </a>
             </div>
             <div class="channel-name">
               RealLifeLore
@@ -207,14 +326,31 @@
         </div>
       </div>
       <div class="video-container">
-        <img src="./images/thumbnails/thumbnail-8.webp" alt="video-image">
+        <a href="https://www.youtube.com/watch?v=lFm4EM1juls" target="_blank">
+          <img src="./images/thumbnails/thumbnail-8.webp" alt="video-image">
+        </a>
         <div class="video-description">
           <div class="channel-picture">
+            <a href="https://www.youtube.com/channel/UCHAK6CyegY22Zj2GWrcaIxg" target="_blank">
             <img src="./images/chanel-picture/channel-8.jpeg" alt="chanel-picture">
+            </a>
+            <div class="tooltip-channel">
+              <img src="./images/chanel-picture/channel-8.jpeg" alt="chanel-picture">
+              <div class="tooltip-channel-description">
+                <div>
+                  Tech Vision
+                </div>
+                <div>
+                  5M Subscribers
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-text-description">
             <div class="video-header">
-              Inside The World's Biggest Passenger Plane
+              <a href="https://www.youtube.com/watch?v=lFm4EM1juls" target="_blank">
+                Inside The World's Biggest Passenger Plane
+              </a>
             </div>
             <div class="channel-name">
               Tech Vision
@@ -226,14 +362,31 @@
         </div>
       </div>
       <div class="video-container">
-        <img src="./images/thumbnails/thumbnail-9.webp" alt="video-image">
+        <a href="https://www.youtube.com/watch?v=ixmxOlcrlUc" target="_blank">
+          <img src="./images/thumbnails/thumbnail-9.webp" alt="video-image">
+        </a>
         <div class="video-description">
           <div class="channel-picture">
-            <img src="./images/chanel-picture/channel-9.jpeg" alt="chanel-picture">
+            <a href="https://www.youtube.com/c/OFFICIALTHENXSTUDIOS" target="_blank">
+              <img src="./images/chanel-picture/channel-9.jpeg" alt="chanel-picture">
+            </a>
+            <div class="tooltip-channel">
+              <img src="./images/chanel-picture/channel-9.jpeg" alt="chanel-picture">
+              <div class="tooltip-channel-description">
+                <div>
+                  ThenX
+                </div>
+                <div>
+                  22M Subscribers
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-text-description">
             <div class="video-header">
-              The SECRET to Super Human STRENGTH
+              <a href="https://www.youtube.com/watch?v=ixmxOlcrlUc" target="_blank">
+                The SECRET to Super Human STRENGTH
+              </a>
             </div>
             <div class="channel-name">
               ThenX
@@ -245,14 +398,31 @@
         </div>
       </div>
       <div class="video-container">
-        <img src="./images/thumbnails/thumbnail-10.webp" alt="video-image">
+        <a href="https://www.youtube.com/watch?v=R2vXbFp5C9o" target="_blank">
+          <img src="./images/thumbnails/thumbnail-10.webp" alt="video-image">
+        </a>
         <div class="video-description">
           <div class="channel-picture">
-            <img src="./images/chanel-picture/channel-10.jpeg" alt="chanel-picture">
+            <a href="https://www.youtube.com/user/businessinsider" target="_blank">
+              <img src="./images/chanel-picture/channel-10.jpeg" alt="chanel-picture">
+            </a>
+            <div class="tooltip-channel">
+              <img src="./images/chanel-picture/channel-10.jpeg" alt="chanel-picture">
+              <div class="tooltip-channel-description">
+                <div>
+                  Business Insider
+                </div>
+                <div>
+                  18M Subscribers
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-text-description">
             <div class="video-header">
-              How The World's Largest Cruise Ship Makes 30,000 Meals Every Day
+              <a href="https://www.youtube.com/watch?v=R2vXbFp5C9o" target="_blank">
+                How The World's Largest Cruise Ship Makes 30,000 Meals Every Day
+              </a>
             </div>
             <div class="channel-name">
               Business Insider
@@ -264,14 +434,31 @@
         </div>
       </div>
       <div class="video-container">
-        <img src="./images/thumbnails/thumbnail-11.webp" alt="video-image">
+        <a href="https://www.youtube.com/watch?v=0nZuYyXET3s" target="_blank">
+          <img src="./images/thumbnails/thumbnail-11.webp" alt="video-image">
+        </a>
         <div class="video-description">
           <div class="channel-picture">
-            <img src="./images/chanel-picture/channel-11.jpeg" alt="chanel-picture">
+            <a href="https://www.youtube.com/c/Destinationtips" target="_blank">
+              <img src="./images/chanel-picture/channel-11.jpeg" alt="chanel-picture">
+            </a>
+            <div class="tooltip-channel">
+              <img src="./images/chanel-picture/channel-11.jpeg" alt="chanel-picture">
+              <div class="tooltip-channel-description">
+                <div>
+                  Destination Tips
+                </div>
+                <div>
+                  4M Subscribers
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-text-description">
             <div class="video-header">
-              Dubai's Crazy Underwater Train and Other Things #Only in Dubai
+              <a href="https://www.youtube.com/watch?v=0nZuYyXET3s" target="_blank">
+                Dubai's Crazy Underwater Train and Other Things #Only in Dubai
+              </a>
             </div>
             <div class="channel-name">
               Destination Tips
@@ -283,14 +470,31 @@
         </div>
       </div>
       <div class="video-container">
-        <img src="./images/thumbnails/thumbnail-12.webp" alt="video-image">
+        <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs" target="_blank">
+          <img src="./images/thumbnails/thumbnail-12.webp" alt="video-image">
+        </a>
         <div class="video-description">
           <div class="channel-picture">
-            <img src="./images/chanel-picture/channel-12.jpeg" alt="chanel-picture">
+            <a href="https://www.youtube.com/teded" target="_blank">
+              <img src="./images/chanel-picture/channel-12.jpeg" alt="chanel-picture">
+            </a>
+            <div class="tooltip-channel">
+              <img src="./images/chanel-picture/channel-12.jpeg" alt="chanel-picture">
+              <div class="tooltip-channel-description">
+                <div>
+                  TED-Ed
+                </div>
+                <div>
+                  16M Subscribers
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-text-description">
             <div class="video-header">
-              What would happen if you didn't drink water? - Mia Nacamulli
+              <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs" target="_blank">
+                What would happen if you didn't drink water? - Mia Nacamulli
+              </a>
             </div>
             <div class="channel-name">
               TED-Ed
